# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "Some lazy slapped together template to do rust with vite!"
version = "0.1.0"
authors = ["Voided Name"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/VoidedName/rust-tcg"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
js-sys = "0.3.64"
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.5.0"
strum = { version = "0.25.0", features = ["derive"] }
wasm-bindgen = "0.2.45"
getrandom = { version = "0.2", features = ["js"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rand = "0.8.5"
serde_json = "1.0.102"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
futures = "0.3.28"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.34"
